数据库连接池修改

--- a/commonutils_spider/DBConfig.conf
+++ b/commonutils_spider/DBConfig.conf
@@ -1,7 +1,15 @@
-[database]
+[spiderdatabase]
 dbhost=127.0.0.1
 dbport=3366
-dbname=test
-dbuser=test
-dbpassword=test
+dbname=ktproject
+dbuser=root
+dbpassword=4559065
+dbcharset=utf8
+
+[errordatabase]
+dbhost=127.0.0.1
+dbport=3366
+dbname=crawerror
+dbuser=root
+dbpassword=4559065
 dbcharset=utf8
