数据库连接池修改

--- a/commonutils_spider/DBConfig.conf
+++ b/commonutils_spider/DBConfig.conf
@@ -1,4 +1,12 @@
 [spiderdatabase]
+dbhost=10.0.30.201
+dbport=3366
+dbname=ktproject
+dbuser=belle
+dbpassword=belle@belle
+dbcharset=utf8
+
+[database]
 dbhost=127.0.0.1
 dbport=3366
 dbname=ktproject
