数据库连接池修改

--- a/commonutils_spider/DBConfig.conf
+++ b/commonutils_spider/DBConfig.conf
@@ -4,7 +4,7 @@ dbport=3366
 dbname=ktproject
 dbuser=belle
 dbpassword=belle@belle
-dbcharset=utf8
+charset=utf8
 
 [database]
 dbhost=127.0.0.1
@@ -13,7 +13,6 @@ dbname=ktproject
 dbuser=root
 charset=utf8
 dbpassword=4559065
-dbcharset=utf8
 
 [errordatabase]
 dbhost=127.0.0.1
