数据库连接池修改

--- a/commonutils_spider/DBConfig.conf
+++ b/commonutils_spider/DBConfig.conf
@@ -6,6 +6,14 @@ dbuser=belle
 dbpassword=belle@belle
 charset=utf8
 
+[spidererrordatabase]
+dbhost=10.0.30.201
+dbport=3366
+dbname=crawerror
+dbuser=belle
+dbpassword=belle@belle
+charset=utf8
+
 [database]
 dbhost=127.0.0.1
 dbport=3366
