数据库连接池修改

--- a/commonutils_spider/DBConfig.conf
+++ b/commonutils_spider/DBConfig.conf
@@ -1,31 +1,15 @@
 [spiderdatabase]
-dbhost=10.0.30.201
+dbhost=216.189.56.159
 dbport=3366
 dbname=ktproject
-dbuser=belle
-dbpassword=belle@belle
+dbuser=wusezhang
+dbpassword=zjj07174559065
 charset=utf8
 
 [spidererrordatabase]
-dbhost=10.0.30.201
+dbhost=216.189.56.159
 dbport=3366
 dbname=crawerror
-dbuser=belle
-dbpassword=belle@belle
+dbuser=wusezhang
+dbpassword=zjj07174559065
 charset=utf8
-
-[database]
-dbhost=127.0.0.1
-dbport=3366
-dbname=ktproject
-dbuser=root
-charset=utf8
-dbpassword=4559065
-
-[errordatabase]
-dbhost=127.0.0.1
-dbport=3366
-dbname=crawerror
-dbuser=root
-dbpassword=4559065
-dbcharset=utf8
